--- a/apps/frontend/src/prognotes/prognotes.template.html
+++ b/apps/frontend/src/prognotes/prognotes.template.html
@@ -1,10 +1,36 @@
 <header>
   <label (click)="goToHome()">ProgNotes</label>
-  <button mat-raised-button color="primary" (click)="navigateToAuth('login')">
+  <button
+    mat-raised-button
+    color="primary"
+    *ngIf="(isLoggedIn | async) === true"
+    (click)="navigateToProfile()"
+  >
+    Profile
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    *ngIf="(isLoggedIn | async) === false"
+    (click)="navigateToAuth('login')"
+  >
     Login
   </button>
-  <button mat-raised-button color="primary" (click)="navigateToAuth('sign-up')">
+  <button
+    mat-raised-button
+    color="primary"
+    *ngIf="(isLoggedIn | async) === false"
+    (click)="navigateToAuth('sign-up')"
+  >
     Sign up
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    *ngIf="(isLoggedIn | async) === true"
+    (click)="logout()"
+  >
+    Logout
   </button>
 </header>
 <router-outlet></router-outlet>
